# apk-decompiler

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  apkdec  apkdec.bat  apkdec.ps1  pyproject.toml
.github/workflows/: ci.yml
scripts/: install.bat  install.ps1  install.sh
src/apkdec/: __init__.py  __main__.py  apk.py  axml.py  cli.py  decompile.py  dex.py  security.py  tools.py
tests/: fixtures.py  test_apk.py  test_axml.py  test_dex.py  test_security.py
