[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apkdec"
version = "0.1.0"
description = "Cross-platform, dependency-free CLI APK decompiler and inspector"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "apkdec contributors" }]
keywords = ["android", "apk", "decompiler", "reverse-engineering", "dex", "manifest", "jadx", "apktool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/emrezdemir/apk-decompiler"
Repository = "https://github.com/emrezdemir/apk-decompiler"
Issues = "https://github.com/emrezdemir/apk-decompiler/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
apkdec = "apkdec.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
